# bevy_mod_inverse_kinematics

./: CHANGELOG.MD  Cargo.toml  README.MD
assets/: skin.gltf
examples/: skin_mesh.rs
src/: lib.rs  solver.rs
