[package]
name = "bevy_mod_inverse_kinematics"
version = "0.5.0"
authors = ["Bram Buurlage <brambuurlage@gmail.com>"]
edition = "2021"
categories = ["game-engines", "graphics", "rendering"]
description = "An inverse kinematics plugin for the Bevy engine."
repository = "https://github.com/Kurble/bevy_mod_inverse_kinematics/"
keywords = ["gamedev", "graphics", "bevy", "animation"]
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.13"
bevy_editor_pls = "0.6"